--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
-      <p>Progateはオンラインプログラミング学習サービスです。<br>初心者にもやさしいスライドとレッスンで、ウェブサービスを作りながらプログラミングを学んでいきましょう。</p>
+      <h1>たいさん、こんにちは！！.<br>僕は朝岡優太です！.</h1>
+      <p>外での趣味、フットサルは楽しいですよね！！<br>何か、室内の新しい趣味も見つけたいですよね！</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
         <p>or</p>
