--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <div class="top-wrapper">
     <div class="container">
-      <h1>たいさん、こんにちは！！.<br>僕は朝岡優太です！.</h1>
+      <h1>たいさん、こんにちは！！.<br>僕は優太です！.</h1>
       <p>外での趣味、フットサルは楽しいですよね！！<br>何か、室内の新しい趣味も見つけたいですよね！</p>
       <div class="btn-wrapper">
         <a href="#" class="btn signup">新規登録はこちら</a>
